# rustine

./: Cargo.toml  FORMAT.md  README.md  dist-workspace.toml
src/: cli.rs  error.rs  lib.rs  main.rs
src/core/: checksum.rs  diff.rs  format.rs  inspect.rs  mod.rs  patch.rs  preview.rs
src/io/: check.rs  fs.rs  mod.rs
src/ui/: ctx.rs  fmt.rs  level.rs  mod.rs
